# contents of a minimal pyproject.toml 

[build-system] 
requires = ["hatchling"] 
build-backend = "hatchling.build" 

[project] 
name = "example_package_nkalauni" 
dynamic = ["version"] 
dependencies = ["numpy"]

[project.optional-dependencies]
test = ["pytest"]

[tool.hatch]
version.path = "src/example_package_YOUR_USERNAME_HERE/__init__.py"