# contents of a minimal pyproject.toml 

[build-system] 
requires = ["hatchling"] 
build-backend = "hatchling.build" 

[project] 
name = "example_package_nkalauni" 
dynamic = ["version"] 
readme = "README.md"
dependencies = ["numpy>=1.22"]

[project.optional-dependencies]
test = ["pytest"]

[tool.hatch]
version.path = "src/example_package_nkalauni/__init__.py"